--- a/public/app.css
+++ b/public/app.css
@@ -213,3 +213,33 @@ header h1 {
 .todo-form button {
     margin-left: 10px;
 }
+
+
+/* Animation with Addons ReactCSSTransitionGroup*/
+
+.slide-enter {
+    transform: translateX(-100%);
+}
+
+.slide-enter.slide-enter-active {
+    transform: translateX(0);
+    transition: all 0.5s;
+}
+
+.slide-leave {
+    transform: translateX(0);
+}
+
+.slide-leave.slide-leave-active {
+    transform: translateX(100%);
+    transition: all 0.5s;
+}
+
+.slide-appear {
+    opacity: 0;
+}
+
+.slide-appear.slide-appear-active {
+    transition: all 0.5s;
+    opacity: 1;
+}
